--- a/index.html
+++ b/index.html
@@ -6,26 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup 2022</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <!-- Google Font  -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Trispace:wght@100;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Trispace:wght@100;700&display=swap"
         rel="stylesheet">
+
+
+    <!-- Font awesome  -->
+    <script src="https://kit.fontawesome.com/ac312ef560.js" crossorigin="anonymous"></script>
+
+
+    <!-- Style sheet  -->
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <main>
-        <section class="head">
+    <main class="intro">
+        <section class="intro-banner">
             <div class="text">
                 <h1>The Greatest Show On The Earth</h1>
-                <p>Taking place quadrennially, the FIFA Men's World Cup™ sees 32 nations compete against each other for
-                    the prize. With continental qualification pathways leading to an exciting finals event, it brings
-                    fans together around the passion and love for the game.</p>
-                <h3>Watch Live</h3>
+                <p>“Some people think football is a matter of life and death. I don’t like that attitude. I can assure
+                    them it is much more serious than that.” </p>
+                <br>
+                <button class="button"> Read Now <i class="fa-solid fa-angle-right"></i> </button>
             </div>
-            <div class="image">
-                <img src="assets/Banner Image.png" alt="">
+            <div>
+                <img class="banner-img" src="images/ronaldinho.png" alt="">
             </div>
+
         </section>
     </main>
 </body>
