--- a/index.html
+++ b/index.html
@@ -24,21 +24,118 @@
 </head>
 
 <body>
-    <main class="intro">
-        <section class="intro-banner">
-            <div class="text">
-                <h1>The Greatest Show On The Earth</h1>
-                <p>“Some people think football is a matter of life and death. I don’t like that attitude. I can assure
-                    them it is much more serious than that.” </p>
-                <br>
-                <button class="button"> Read Now <i class="fa-solid fa-angle-right"></i> </button>
-            </div>
-            <div>
-                <img class="banner-img" src="images/ronaldinho.png" alt="">
-            </div>
+    <main>
+        <header class="intro">
+            <section class="intro-banner">
+                <div class="text">
+                    <h1>The Greatest Show On The Earth</h1>
+                    <p>“Some people think football is a matter of life and death. I don’t like that attitude. I can
+                        assure
+                        them it is much more serious than that.” </p>
+                    <br>
+                    <button class="button"> Read Now <i class="fa-solid fa-angle-right"></i> </button>
+                </div>
+                <div>
+                    <img class="banner-img" src="images/ronaldinho.png" alt="">
+                </div>
 
+            </section>
+        </header> >
+        <!-- starting of sexond part  -->
+        <section class="menu-blogs">
+            <div class="menu">
+
+                <aside>
+                    <a class="menu-link" href="">Upcoming Matches</a>
+                    <a class="menu-link" href="">All Groups</a>
+                    <a id="blog" class="menu-link" href="">Blog</a>
+                </aside>
+
+            </div>
+            <div class="blogs">
+                <artical class="blog">
+                    <div class="thumbnail">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h3>
+                        <button class="transfer">Transfer</button><br>
+                        <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
+                        <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+
+                    </div>
+                </artical>
+                <artical class="blog">
+                    <div class="thumbnail">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h3>
+                        <button class="transfer">Transfer</button><br>
+                        <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
+                        <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+
+                    </div>
+                </artical>
+                <artical class="blog">
+                    <div class="thumbnail">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h3>
+                        <button class="transfer">Transfer</button><br>
+                        <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
+                        <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+
+                    </div>
+                </artical>
+                <artical class="blog">
+                    <div class="thumbnail">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h3>
+                        <button class="transfer">Transfer</button><br>
+                        <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
+                        <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+
+                    </div>
+                </artical>
+                <artical class="blog">
+                    <div class="thumbnail">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h3>
+                        <button class="transfer">Transfer</button><br>
+                        <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
+                        <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+
+                    </div>
+                </artical>
+                <artical class="blog">
+                    <div class="thumbnail">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h3>
+                        <button class="transfer">Transfer</button><br>
+                        <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
+                        <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+
+                    </div>
+                </artical>
+            </div>
         </section>
     </main>
+
+
 </body>
 
 </html>
