--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                         <h3 class="blog-title">Transfer Live: Chlesea in talks
                             over Kimpenbe transfer</h3>
                         <button class="transfer">Transfer</button><br>
-                        <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
-                        <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+                        <i class="fa-regular fa-clock "></i> <span>10 hrs</span>
+                        <i class="fa-regular fa-comment-dots icon"></i> <span>25</span>
 
                     </div>
                 </artical>
@@ -75,7 +75,7 @@
                             over Kimpenbe transfer</h3>
                         <button class="transfer">Transfer</button><br>
                         <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
-                        <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+                        <i class="fa-regular fa-comment-dots icon"></i> <span>25</span>
 
                     </div>
                 </artical>
@@ -88,7 +88,7 @@
                             over Kimpenbe transfer</h3>
                         <button class="transfer">Transfer</button><br>
                         <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
-                        <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+                        <i class="fa-regular fa-comment-dots icon"></i> <span>25</span>
 
                     </div>
                 </artical>
@@ -101,7 +101,7 @@
                             over Kimpenbe transfer</h3>
                         <button class="transfer">Transfer</button><br>
                         <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
-                        <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+                        <i class="fa-regular fa-comment-dots icon"></i> <span>25</span>
 
                     </div>
                 </artical>
@@ -114,7 +114,7 @@
                             over Kimpenbe transfer</h3>
                         <button class="transfer">Transfer</button><br>
                         <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
-                        <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+                        <i class="fa-regular fa-comment-dots icon"></i> <span>25</span>
 
                     </div>
                 </artical>
@@ -127,7 +127,7 @@
                             over Kimpenbe transfer</h3>
                         <button class="transfer">Transfer</button><br>
                         <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
-                        <i class="fa-regular fa-comment-dots"></i> <span>25</span>
+                        <i class="fa-regular fa-comment-dots icon"></i> <span>25</span>
 
                     </div>
                 </artical>
