--- a/index.html
+++ b/index.html
@@ -134,6 +134,21 @@
             </div>
         </section>
     </main>
+    <footer>
+        <h1 class="footer-h1">Goal</h1>
+        <hr>
+        <span class="footer-text">Contact Us</span>
+        <span class="footer-text">Terms of Service</span>
+        <span class="footer-text">Privacy Policy</span>
+        <span class="footer-text">Privacy Settings</span>
+        <span class="footer-text">Goal APP</span>
+        <span class="footer-text">Goal Live</span><br>
+        <div class="last-logo">
+            <i class="fa-brands fa-facebook footer-logo"></i>
+            <i class="fa-brands fa-instagram footer-logo"></i>
+        </div>
+
+    </footer>
 
 
 </body>
