--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         assure
                         them it is much more serious than that.” </p>
                     <br>
-                    <button class="button"> Read Now <i class="fa-solid fa-angle-right"></i> </button>
+                    <button class="button"> Watch now<i class="fa-solid fa-angle-right"></i> </button>
                 </div>
                 <div>
                     <img class="banner-img" src="images/ronaldinho.png" alt="">
@@ -61,8 +61,10 @@
                         <h3 class="blog-title">Transfer Live: Chlesea in talks
                             over Kimpenbe transfer</h3>
                         <button class="transfer">Transfer</button><br>
-                        <i class="fa-regular fa-clock "></i> <span>10 hrs</span>
-                        <i class="fa-regular fa-comment-dots icon"></i> <span>25</span>
+                        <div class="two-icon">
+                            <i class="fa-regular fa-clock "></i> <span>10 hrs</span>
+                            <i class="fa-regular fa-comment-dots icon"></i> <span>25</span>
+                        </div>
 
                     </div>
                 </artical>
@@ -71,11 +73,10 @@
                         <img src="images/Blog Image.png" alt="">
                     </div>
                     <div class="blog-info">
-                        <h3 class="blog-title">Transfer Live: Chlesea in talks
-                            over Kimpenbe transfer</h3>
+                        <h3 class="blog-title">Arsenal wants Cristiano to play by their side</h3>
                         <button class="transfer">Transfer</button><br>
-                        <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
-                        <i class="fa-regular fa-comment-dots icon"></i> <span>25</span>
+                        <i class="fa-regular fa-clock"></i> <span>13 hrs</span>
+                        <i class="fa-regular fa-comment-dots icon"></i> <span>225</span>
 
                     </div>
                 </artical>
@@ -84,11 +85,12 @@
                         <img src="images/Blog Image.png" alt="">
                     </div>
                     <div class="blog-info">
-                        <h3 class="blog-title">Transfer Live: Chlesea in talks
-                            over Kimpenbe transfer</h3>
+                        <h3 class="blog-title">Real Madrid about to buy Robben again?
+                            Or rumor?
+                        </h3>
                         <button class="transfer">Transfer</button><br>
-                        <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
-                        <i class="fa-regular fa-comment-dots icon"></i> <span>25</span>
+                        <i class="fa-regular fa-clock"></i> <span>2 hrs</span>
+                        <i class="fa-regular fa-comment-dots icon"></i> <span>125</span>
 
                     </div>
                 </artical>
@@ -97,11 +99,11 @@
                         <img src="images/Blog Image.png" alt="">
                     </div>
                     <div class="blog-info">
-                        <h3 class="blog-title">Transfer Live: Chlesea in talks
-                            over Kimpenbe transfer</h3>
+                        <h3 class="blog-title">R.M: Cristiano Ronaldo is still a Madridista through and through
+                        </h3>
                         <button class="transfer">Transfer</button><br>
-                        <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
-                        <i class="fa-regular fa-comment-dots icon"></i> <span>25</span>
+                        <i class="fa-regular fa-clock"></i> <span>8 hrs</span>
+                        <i class="fa-regular fa-comment-dots icon"></i> <span>35</span>
 
                     </div>
                 </artical>
@@ -110,11 +112,10 @@
                         <img src="images/Blog Image.png" alt="">
                     </div>
                     <div class="blog-info">
-                        <h3 class="blog-title">Transfer Live: Chlesea in talks
-                            over Kimpenbe transfer</h3>
+                        <h3 class="blog-title">Paulo Dybala: Jose Mourinho's Roma sign Argentina forward</h3>
                         <button class="transfer">Transfer</button><br>
-                        <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
-                        <i class="fa-regular fa-comment-dots icon"></i> <span>25</span>
+                        <i class="fa-regular fa-clock"></i> <span>11 hrs</span>
+                        <i class="fa-regular fa-comment-dots icon"></i> <span>199</span>
 
                     </div>
                 </artical>
@@ -123,11 +124,10 @@
                         <img src="images/Blog Image.png" alt="">
                     </div>
                     <div class="blog-info">
-                        <h3 class="blog-title">Transfer Live: Chlesea in talks
-                            over Kimpenbe transfer</h3>
+                        <h3 class="blog-title">Full Chelsea Premier League fixture list for 2022/23</h3>
                         <button class="transfer">Transfer</button><br>
-                        <i class="fa-regular fa-clock"></i> <span>10 hrs</span>
-                        <i class="fa-regular fa-comment-dots icon"></i> <span>25</span>
+                        <i class="fa-regular fa-clock"></i> <span>3 hrs</span>
+                        <i class="fa-regular fa-comment-dots icon"></i> <span>52</span>
 
                     </div>
                 </artical>
@@ -137,12 +137,14 @@
     <footer>
         <h1 class="footer-h1">Goal</h1>
         <hr>
-        <span class="footer-text">Contact Us</span>
-        <span class="footer-text">Terms of Service</span>
-        <span class="footer-text">Privacy Policy</span>
-        <span class="footer-text">Privacy Settings</span>
-        <span class="footer-text">Goal APP</span>
-        <span class="footer-text">Goal Live</span><br>
+        <div class="last-line">
+            <span class="footer-text">Contact Us</span>
+            <span class="footer-text">Terms of Service</span>
+            <span class="footer-text">Privacy Policy</span>
+            <span class="footer-text">Privacy Settings</span>
+            <span class="footer-text">Goal APP</span>
+            <span class="footer-text">Goal Live</span>
+        </div><br>
         <div class="last-logo">
             <i class="fa-brands fa-facebook footer-logo"></i>
             <i class="fa-brands fa-instagram footer-logo"></i>
