--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="menu">
 
                 <aside>
-                    <a class="menu-link" href="">Upcoming Matches</a>
+                    <a class="menu-link" href="match.html">Upcoming Matches</a>
                     <a class="menu-link" href="">All Groups</a>
                     <a id="blog" class="menu-link" href="">Blog</a>
                 </aside>
@@ -146,8 +146,9 @@
             <span class="footer-text">Goal Live</span>
         </div><br>
         <div class="last-logo">
-            <i class="fa-brands fa-facebook footer-logo"></i>
-            <i class="fa-brands fa-instagram footer-logo"></i>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook footer-logo"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram footer-logo"></i></a>
+            <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin footer-logo"></i></a>
         </div>
 
     </footer>
